--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -93,13 +93,8 @@ body, html {
 </div>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      </div>
-  </div>
-  <h4 class="w3-center"><b>Gejala Flu Burung</b></h4>
-
-<div class="w3-container w3-padding-64 w3-col m6">
-      
-      <img src="sakit.jpg" class="w3-round w3-image" alt="flu burung" width="1000px" height="666px">
+      <p><b>Gejala Flu Burung</b></p><br>
+      <img src="sakit.jpg" class="w3-round w3-image w3-image" alt="flu burung" width="1000px" height="666px">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -170,15 +165,15 @@ Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkun
 </div>
   <div class="w3-col m3 w3-center">
     <img src="ayam-muntah.png" class="w3-image" alt="ayam muntah" width="1080px" height="1080px">
-    <p class="w3-justify">Kontak dengan cairan tubuh unggas yang sakit, misalnya air ludah. Atau tidak sengaja menghirup percikan cairan tubuh tersebut.</p>
+    <p class="w3-justify">Kontak dengan cairan tubuh unggas yang sakit, misalnya ludah. Atau tidak sengaja menghirup percikan cairan tubuh tersebut.</p>
   </div>
   <div class="w3-col m3 w3-center">
     <img src="ayam kotor dipegang.png" class="w3-image" alt="ayam kotor" width="1080px" height="1080px">
-    <p class="w3-justify">Kontak dengan debu dari kotoran unggas yang sakit yang telah mengering atau menghirupnya.</p>
+    <p class="w3-justify">Kontak dengan debu dari kotoran unggas sakit yang telah mengering atau menghirupnya.</p>
   </div>
   <div class="w3-col m3 w3-center">
     <img src="telor-mentah.png" class ="w3-image" alt="telur mentah" width="1080px" height="1080px">
-    <p class="w3-justify">Menyantap daging atau telurnya dengan tidak dimasak sampai benar-benar matang. Menkonsumsi daging dan telur yang matang tidak akan membuat Anda tertular virus flu burung.</p>
+    <p class="w3-justify">Menyantap daging atau telurnya dengan tidak dimasak sampai benar-benar matang. Makan daging dan telur yang matang tidak akan membuat Anda tertular virus flu burung.</p>
 </div>
   </div>
   <h4 class="w3-center"><b>Pengobatan Flu Burung</b></h4>
@@ -206,7 +201,7 @@ Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkun
   <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>4. Harus makan makanan sehat</p>
-        <img src="makanansehat2.jpg" class="w3-round w3-margin-bottom" alt="Makanan sehat" style="width:60%">
+        <img src="makanansehat2.png" class="w3-round w3-margin-bottom" alt="Makanan sehat" style="width:60%">
       </div>
       <div class="w3-third">
         <p>5. Harus istirahat</p>
