--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -92,8 +92,8 @@ body, html {
   <p>Flu burung adalah infeksi virus yang menyerang bukan hanya burung, tetapi juga manusia, dan hewan lain. Namun sebagian besar adalah unggas. H5N1 adalah bentuk paling umum dari flu burung.</p>
 </div>
   <div class="w3-row">
+<h4 class="w3-center"><b>Gejala Flu Burung</b></h4><br>
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b>Gejala Flu Burung</b></p><br>
       <img src="sakit.jpg" class="w3-round w3-image w3-image" alt="flu burung" width="1000px" height="666px">
     </div>
 
