--- a/about us.html
+++ b/about us.html
@@ -85,7 +85,7 @@ body, html {
         <div class="w3-container">
            <h5>Irza Muhammad Pratama</h5>
           <p><b>Leader</b></p>
-          <p><a href="https://hilmidaffaw.github.io" class="fa fa-github w3-hover-opacity"> hilmidaffaw </a></p>
+          <p><a href="https://irza64.github.io" class="fa fa-github w3-hover-opacity"> irza64 </a></p>
         </div>
     </div>
   </div>
