--- a/pencegahan.html
+++ b/pencegahan.html
@@ -73,38 +73,94 @@ body, html {
     <a href="tentang wabah.html" class="w3-bar-item w3-button" onclick="toggleFunction()">TENTANG WABAH</a>
     <a href="penyebaran.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENYEBARAN</a>
     <a href="penanggulangan.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENANGGULANGAN</a>
-    <a href="about us.html" class="w3-bar-item w3-button">About Us</a>
+    <a href="about us.html" class="w3-bar-item w3-button">Tentang</a>
   </div>
 </div>
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-animate-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">TENTANG <span class="w3-hide-small"> AVIAN INFLUENZA</span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">TENTANG <span class="w3-hide-small">AVIAN INFLUENZA</span> </span>
   </div>
 </div>
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="flu burung">
-  <div class="w3-content w3-container w3-padding-64" id="flu burung">
-  <h3><b>Pelajari lebih lanjut Mengenai Penanggulangan Avian Influenza</b></h3><br>
-  <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-button w3-hide-small w3-text-black w3-hover-text-white w3-w3-hover-black" title="select topic"><b> Silakan Pilih topik yang diinginkan </b><i class="fa fa-caret-down"></i></button>
-      <div class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom">
-        <a href="gejala.html" class="w3-bar-item w3-button"> Gejala </a>
-        <a href="pencegahan.html" class="w3-bar-item w3-button"> Pencegahan dan Penularan</a>
-        <a href="pengobatan.html" class="w3-bar-item w3-button"> Pengobatan </a>
-      </div>
-    </div>
-  </div>
+  <h3 class="w3-center">FLU BURUNG</h3>
+  <p class="w3-center"><em>H5N1</em></p>
+<div class="w3-container w3-center">
+  <p>Flu burung adalah infeksi virus yang menyerang bukan hanya burung, tetapi juga manusia, dan hewan lain. Namun sebagian besar adalah unggas. H5N1 adalah bentuk paling umum dari flu burung.</p>
 </div>
 
-</footer>
- <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="penyebaran.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p>Created by Brigitta Natasha Widiaputri, Krisna Yudha Pradana, & Rahmania Nur Diniyah</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</p>
-</footer>
+    <div>
+  <h4 class="w3-center"><b>Pencegahan Flu Burung</b></h4>
+</div>
 
+<div class="w3-col m6 w3-justify w3-padding-64">
+  <p>Dibawah ini merupakan beberapa cara pencegahan flu burung:</p>
+  <ul>
+    <li>Hindari kontak langsung dengan burung/unggas seperti di pasar dan peternakan, dimana lingkungan disana bisa tercemar oleh limbah dari unggas.</li>
+    <li>Jangan menyentuh burung yang sedang sakit atau sudah mati.</li>
+    <li>Mencuci tangan teratur, bisa mencegah penularan flu burung dan kuman lainnya. Bila Anda menyentuh kotoran dan liur burung, segera cuci tangan dengan sabun cuci tangan antibakteri dan air.</li>
+  </ul>
+</div>
+<div class="w3-container w3-padding-64 w3-col m6">
+  <img src="Cara-Pencegahan-Penyakit-Lupus.jpg" class="w3-round w3-image" alt="gambar tangan" width="800px" height="500px">
+</div>
+
+<div>
+<h4 class="w3-center"><b>Cara Penularan Flu Burung</b></h4>
+</div>
+
+<div class="w3-col m6 w3-justify w3-padding-large">
+  <p>Flu burung ditularkan secara langsung antar burung (yang hidup maupun sudah mati) melalui feses, cairan, liur dan darahnya. Biasanya penularan antar manusia tidak bisa terjadi. Penularannya biasanya melalui burung ke manusia.
+Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkungan yang terkontaminasi, seperti:
+</p>
+</div>
+
+<div class="w3-container w3-padding-small w3-col m6">
+  <img src="ilustrasi-flu-burung-edited.jpg" class="w3-round w3-image" alt="penularan" width="350px" height="196.5px">
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div class="w3-row-padding">
+  <div class="w3-col m3 w3-dark-grey w3-center"><p><b>1</b></p></div>
+  <div class="w3-col m3 w3-light-grey w3-center"><p><b>2</b></p></div>
+  <div class="w3-col m3 w3-dark-grey w3-center"><p><b>3</b></p></div>
+  <div class="w3-col m3 w3-light-grey w3-center"><p><b>4</b></p></div>
+</div>
+<div class="w3-padding-large w3-row-padding">
+  <div class="w3-col m3 w3-center">
+    <img src="ayam dipegang.png" class="w3-image" alt="ayam dipegang" width="1080px" height="1080px">
+    <p class="w3-justify">Menyentuh unggas yang telah terinfeksi, baik yang masih hidup maupun yang sudah mati.</p>
+</div>
+  <div class="w3-col m3 w3-center">
+    <img src="ayam-muntah.png" class="w3-image" alt="ayam muntah" width="1080px" height="1080px">
+    <p class="w3-justify">Kontak dengan cairan tubuh unggas yang sakit, misalnya ludah. Atau tidak sengaja menghirup percikan cairan tubuh tersebut.</p>
+  </div>
+  <div class="w3-col m3 w3-center">
+    <img src="ayam kotor dipegang.png" class="w3-image" alt="ayam kotor" width="1080px" height="1080px">
+    <p class="w3-justify">Kontak dengan debu dari kotoran unggas sakit yang telah mengering atau menghirupnya.</p>
+  </div>
+  <div class="w3-col m3 w3-center">
+    <img src="telor-mentah.png" class ="w3-image" alt="telur mentah" width="1080px" height="1080px">
+    <p class="w3-justify">Menyantap daging atau telurnya dengan tidak dimasak sampai benar-benar matang. Makan daging dan telur yang matang tidak akan membuat Anda tertular virus flu burung.</p>
+</div>
+  </div>
+  </div>
+  
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <p>Created by Krisna Yudha Pradana</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</p>
+
+</footer>
+ 
 <script>
 // Modal Image Gallery
 function onClick(element) {
