--- a/perpem.html
+++ b/perpem.html
@@ -28,6 +28,24 @@ body, html {
   min-height: 400px
 }
 
+/* Second image (Portfolio) */
+.bgimg-2 {
+  background-image: url("Header ayam penanggulangan.jpg");
+  min-height: 400px;
+}
+
+/* Third image (Contact) */
+.bgimg-3 {
+  background-image: url("petasebaran.jpg");
+  min-height: 400px;
+}
+
+/* Fourth image (Contact) */
+.bgimg-4 {
+  background-image: url("Stop virus.jpg");
+  min-height: 400px;
+}
+
 .w3-wide {letter-spacing: 10px;}
 .w3-hover-opacity {cursor: pointer;}
 
@@ -67,29 +85,42 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min w3-animation-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">PENANGGULANGAN<span class="w3-hide-small"> AVIAN INFLUENZA</span> 
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">PENANGGULANGAN <span class="w3-hide-small"> AVIAN INFLUENZA</span> 
   </div>
 </div>
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <div class="w3-content w3-container w3-padding-64" id="flu burung">
-  <h3><b>Pelajari lebih lanjut Mengenai Penanggulangan Avian Influenza</b></h3><br>
-  <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-button w3-hide-small w3-text-black w3-hover-text-white w3-w3-hover-black" title="select topic"><b> Silakan Pilih topik yang diinginkan </b><i class="fa fa-caret-down"></i></button>
-      <div class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom">
-        <a href="perpem.html" class="w3-bar-item w3-button"> Peran Pemerintah </a>
-        <a href="sadar.html" class="w3-bar-item w3-button"> Kesadaran Masyarakat</a>
-        <a href="actionplan.html" class="w3-bar-item w3-button"> Action Plan </a>
-      </div>
+  <div>
+      <h4 class="w3-center"><b>Peran Pemerintah dalam Menanggapi Flu Burung</b></h4>
     </div>
-  </div>
+    <div class="w3-col m6 w3-center w3-padding-large">
+      <img src="tanggap flu burung.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="tanggap flu burung.jpg" width="500" height="333">
+    </div>
+
+    <!-- Hide this text on small devices -->
+
+    <div class="w3-col m6 w3-padding-large; w3-container w3-justify">
+
+      <p>Pemerintah menyusun strategi baru untuk menyetop penyebaran flu burung yang terus merenggut korban jiwa. Satu di antaranya dengan memusnahkan unggas di perkotaan yang berada dalam radius satu kilometer dari unggas yang dipastikan terjangkit virus avian influenza.</p>
+
+      <p>Pemerintah juga akan memvaksinasi setiap unggas di radius tiga kilometer dari unggas yang terjangkit flu burung. Hal ini terutama akan dilakukan di perkotaan di lima provinsi yakni Jawa Barat, DKI Jakarta, Lampung, Banten, dan Jawa Tengah. Persediaan obat antiflu burung atau Tamiflu pun akan ditambah. Saat ini pemerintah mempunyai persediaan 160.000 tablet Tamiflu dan rencananya ditambah lagi 200.000 tablet.</p>
+    </div>
+<div class="w3-container w3-justify">
+    <div>
+  <p>Pemerintah akan melibatkan semua masyarakat demi lancarnya program ini. Strategi lain adalah mengendalikan penyebaran wabah maupun infeksi baru pada unggas. Salah satu caranya dengan menjaga sanitasi kandang sehingga kelompok berisiko tinggi seperti peternak juga dapat terhindar dari virus avian influenza.</p>
+
+  <p>Presiden meminta masyarakat tak perlu resah namun tetap waspada terhadap penyakit yang bersumber pada unggas itu. Lebih lanjut, presiden juga meminta masyarakat agar tidak mudah terpengaruh isu-isu yang menyesatkan mengenai flu burung. Pemerintah berupaya melindungi warga serta sumberdaya hayati hewan, khususnya di wilayah NKRI, dari penyakit hewan menular utama flu burung (Avian influenza/AI) dengan melakukan berbagai langkah antisipasi melalui pengendalian terhadap lalu lintas ternak unggas dan produk unggas dari dan ke wilayah NKRI secara ketat. Sebagai contoh, pada 27 April 2005, Departemen Pertanian melalui Dirjen Peternakan mengeluarkan <b>Surat Edaran No. 1403/HK.340/F/04.2005</b> tentang pelarangan pemasukan komoditas unggas, bahan asal unggas dan asil bahan asal unggas dari Malaysia ke dalam wilayah negara Republik Indonesia. Seperti himbauan Pemerintah, warga tidak perlu takut mengkonsumsi telur dan daging ayam serta produk ternak unggas lainnya. Sebab, bila dimasak dengan benar penyakit flu burung tidak perlu dikhawatirkan.</p>
+
+  <p>Konsumsi produk ternak unggas dengan aman. Untuk mengkonsumsi daging ayam, masak daging pada suhu mendidih lebih dari 1 menit, karena virus AI akan mati pada suhu 80 derajat celcius pada pemanasan selama 1 menit. Sedangkan untuk merebus telur dapat dilakukan pada suhu di atas 64 derajat celcius selama 6 menit, karena virus akan mati pada suhu 64 derajat celcius pada pemanasan selama 4,5 menit).</p>
+</div>
+</div>
 </div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p>Created by Irza Muhammad Pratama, Alvin Taniharja & Maretia Imelda</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Created by Maretia Imelda</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
  
 <script>
