--- a/asal.html
+++ b/asal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Penyebaran Flu Burung</title>
+<title>Flu Burung</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -67,26 +67,43 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min w3-animate-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Penyebaran <span class="w3-hide-small">Avian Influenza</span> 
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">PENYEBARAN <span class="w3-hide-small"> AVIAN INFLUENZA</span> 
   </div>
 </div>
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="flu burung">
-  <h3><b>Pelajari lebih lanjut Mengenai Penyebaran Avian Influenza</b></h3><br>
-  <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-button w3-hide-small w3-text-black w3-hover-text-white w3-w3-hover-black" title="select topic"><b> Silakan Pilih topik yang diinginkan </b><i class="fa fa-caret-down"></i></button>
-      <div class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom">
-        <a href="asal.html" class="w3-bar-item w3-button"> Asal Mula </a>
-        <a href="kawasan.html" class="w3-bar-item w3-button"> Kawasan Terinfeksi dan Peta Sebaran </a>
-      </div>
+  <h4 class="w3-center">Asal Mula Penyebaran Avian Influenza</h4><br>
+  <div class="w3-row">
+    <div class="w3-col m6 w3-center w3-padding-large">
+      <p><b>Penyebaran Flu Burung</b></p><br>
+      <img src="Foto flu burung 1.jpg" class="w3-round w3-image" alt="Flu burung" width="1000px" height="666px">
+    </div>
+
+    <div class="w3-col m6 w3-center w3-padding-large">
+      <p>Wabah flu burung pertama kali ditemukan di Italia pada 1878. Tetapi baru dikenali dalam wabah besar yang melanda peternakan ayam di Amerika Serikat (AS) pada 1924-1925. 
+Saat itu flu burung masih menular di antara unggas dan belum terjadi penularan ke hewan lain. Pada Maret 1997, flu burung dari subtipe H5N1 mulai menjangkiti peternakan ayam di Hongkong. 
+Dua bulan kemudian, flu itu menular ke seorang anak laki-laki berusia tiga tahun. Selanjutnya, 17 orang terjangkit virus yang sama di Hong Kong pada Desember 1997. 
+Lalu pemerintah mulai membinasakan 1,5 juta ayam. Pada Februari 2003, virus flu burung H5N1 kembali menyerang Hongkong dan menulari dua orang. Sampai 2004 hampir di seluruh dunia flu burung pada unggas telah mewabah. 
+ Virus H5N1 kemudian menjadi perhatian utama para ahli, karena dapat bermutasi dengan cepat. Virus itu juga mampu berubah menjadi beberapa subtipe virus yang baru sehingga dapat menular ke spesies lain, termasuk manusia. 
+    </p>
     </div>
   </div>
+</div>
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="penyebaran.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p>Created by Hilmi Daffa Windardi & Sabina Cahya Rianti</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</p>
+  <a href="asal.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <p>Created by Sabina Cahya Rianti</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</p>
 </footer>
  
 <script>
