--- a/Penanggulangan.html
+++ b/Penanggulangan.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url("Header ayam.jpg");
+  background-image: url('Header ayam penanggulangan.jpg');
   min-height: 400px
 }
 
@@ -64,59 +64,25 @@ body, html {
   </div>
 </div>
 
-<!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min w3-animate-top" id="home">
-  <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">PENYEBARAN <span class="w3-hide-small"> AVIAN INFLUENZA</span> 
-  </div>
-</div>
-
 <!-- Container (About Section) -->
-<div class="w3-content w3-container w3-padding-64" id="flu burung">
-<h4 class="w3-center"><b>Kawasan Terinfeksi dan Peta Sebaran Avian Influenza</b></h4>
-  <div class="w3-row">
-    <div class="w3-col m6 w3-center w3-col-bottom w3-padding-large">
-      <br><br><br><br><br><p>Selain Amerika Serikat dan kawasan Asia,  negara-negara yang pernah mengalami wabah flu burung antara lain Skotlandia, Inggris, Kanada, Australia, Jerman, Irlandia, Meksiko, Italia, Belanda, Belgia, dan Afrika Selatan.  
-    </p>
+<div class="w3-content w3-container w3-padding-64" id="about">
+  <div class="w3-content w3-container w3-padding-64" id="flu burung">
+  <h3><b>Pelajari lebih lanjut Mengenai Penanggulangan Avian Influenza</b></h3><br>
+  <div class="w3-dropdown-hover">
+      <button class="w3-button w3-text-black w3-hover-text-white w3-w3-hover-black" title="select topic"><b> Silakan Pilih topik yang diinginkan </b><i class="fa fa-caret-down"></i></button>
+      <div class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom">
+        <a href="perpem.html" class="w3-bar-item w3-button"> Peran Pemerintah </a>
+        <a href="sadar.html" class="w3-bar-item w3-button"> Kesadaran Masyarakat</a>
+        <a href="actionplan.html" class="w3-bar-item w3-button"> Action Plan </a>
+      </div>
     </div>
-    <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b>Peta Sebaran Avian Influenza</b></p>
-      <p><em>click image for bigger size</em></p>
-      <div class="w3-row-padding w3-center">
-      <img src="peta.jpg" onclick="onClick(this)" class="w3-round w3-image w3-hover-opacity" alt="Peta Sebaran" width="1000px" height="666px">
-    </div>
-  </div>
-</div>
-
-    <p class="w3-large w3-center w3-padding-16"><b>Kasus Flu Burung pada manusia di Dunia</b></p>
-    <p class="w3-large w3-center w3-padding-16">Hingga 10 Mei 2019, WHO telah mencatat sebanyak 861 kasus dengan 455 kematian pada manusia. Berikut adalah data pada negara dengan kasus terbanyak</p>
-  <p class="w3-wide">Mesir</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:41.7%">359 kasus 120 kematian</div>
-  </div>
-  <p class="w3-wide">Indonesia</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:23.2%">200 kasus 168 kematian</div>
-  </div>
-  <p class="w3-wide">Vietnam</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:14.75%">127 kasus 64 kematian</div>
-  </div>
-</div>
-
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
   </div>
 </div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="kawasan.html" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <p>Created by Hilmi Daffa Windardi</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</p>
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <p>Created by Irza Muhammad Pratama, Alvin Taniharja & Maretia Imelda</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
  
 <script>
