--- a/Penanggulangan.html
+++ b/Penanggulangan.html
@@ -68,8 +68,8 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
   <div class="w3-content w3-container w3-padding-64" id="flu burung">
   <h3><b>Pelajari lebih lanjut Mengenai Penanggulangan Avian Influenza</b></h3><br>
-  <div class="w3-dropdown-hover">
-      <button class="w3-button w3-text-black w3-hover-text-white w3-w3-hover-black" title="select topic"><b> Silakan Pilih topik yang diinginkan </b><i class="fa fa-caret-down"></i></button>
+  <div class="w3-dropdown-hover w3-hide-small">
+      <button class="w3-button w3-hide-small w3-text-black w3-hover-text-white w3-w3-hover-black" title="select topic"><b> Silakan Pilih topik yang diinginkan </b><i class="fa fa-caret-down"></i></button>
       <div class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom">
         <a href="perpem.html" class="w3-bar-item w3-button"> Peran Pemerintah </a>
         <a href="sadar.html" class="w3-bar-item w3-button"> Kesadaran Masyarakat</a>
