--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -64,6 +64,13 @@ body, html {
   </div>
 </div>
 
+<!-- First Parallax Image with Logo Text -->
+<div class="bgimg-1 w3-display-container w3-animate-top" id="home">
+  <div class="w3-display-middle" style="white-space:nowrap;">
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Penanggulangan <span class="w3-hide-small"> Avian Influenza</span> </span>
+  </div>
+</div>
+
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
   <div class="w3-content w3-container w3-padding-64" id="flu burung">
