--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -65,9 +65,9 @@ body, html {
 </div>
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-animate-top" id="home">
+<div class="bgimg-1 w3-display-container w3-opacity-min w3-animation-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Penanggulangan <span class="w3-hide-small"> Avian Influenza</span> </span>
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">PENANGGULANGAN <span class="w3-hide-small"> AVIAN INFLUENZA</span> 
   </div>
 </div>
 
