--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('Header ayam penanggulangan.jpg');
+  background-image: url("Header ayam penanggulangan.jpg");
   min-height: 400px
 }
 
