--- a/kawasan.html
+++ b/kawasan.html
@@ -105,6 +105,14 @@ body, html {
   </div>
 </div>
 
+<div class="w3-content w3-container w3-padding-64">
+ <p>Source : </p> 
+ <ul><li>CNN INDONESIA<br>
+  <a href="http://m.cnnindonesia.com/gaya-hidup/20170309113747-255-198940/flu-burung-masih-hantui-dunia/" class="w3-bar-item w3-button w3-hover-black w3-hover-text-white" style="text-align: left;"> http://m.cnnindonesia.com/gaya-hidup/20170309113747-255-198940/flu-burung-masih-hantui-dunia/</a> </li>
+ <li>World Health Organizations (WHO)<br>
+  <a href="https://www.who.int/influenza/human_animal_interface/2019_05_10_tableH5N1.pdf?ua=1" class="w3-bar-item w3-button w3-hover-black w3-hover-text-white"style="text-align: left;"> https://www.who.int/influenza/human_animal_interface/2019_05_10_tableH5N1.pdf?ua=1</a></li></ul>
+</div>
+
 <!-- Modal for full size images on click-->
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
   <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
