--- a/about us.html
+++ b/about us.html
@@ -156,7 +156,7 @@ body, html {
         <div class="w3-container">
           <h5>Maretia Imelda</h5>
           <p><b>Programmer</b></p>
-           <p><a href="https://instagram.com/imell_444/" class="fa fa-instagram w3-hover-opacity"> @imell_444 </a></p>
+           <p><a href="https://maretiaimelda.github.io/" class="fa fa-github w3-hover-opacity"> maretiaimelda </a></p>
         </div>
     </div>
   </div>
@@ -167,7 +167,7 @@ body, html {
         <div class="w3-container">
           <h5>Rahmania Nur Diniyah</h5>
           <p><b>Programmer</b></p>
-          <p><a href="https://instagram.com/rahmaniand29/" class="fa fa-instagram w3-hover-opacity"> @rahmaniand29 </a></p>
+          <p><a href="https://RahmaniaNurDiniyah.github.io/" class="fa fa-github w3-hover-opacity"> RahmaniaNurDiniyah </a></p>
         </div>
     </div>
   </div>
