--- a/sadar.html
+++ b/sadar.html
@@ -147,6 +147,9 @@ body, html {
               <p class="w3-justify">Simpan pupuk kandang (Jauhkan dari kolam, sumur, dll.)</p>
           </div>
             </div>
+        <p> Source: <br>
+          http://www.litbang.pertanian.go.id/info-aktual/221/
+        </p>
           
       </div>
     </div>
