--- a/actionplan.html
+++ b/actionplan.html
@@ -117,6 +117,9 @@ body, html {
 <div class="w3-content w3-container w3-padding-64">
  <p>Source : </p> 
   <a href="http://www.litbang.pertanian.go.id/info-aktual/221/" class="w3-bar-item w3-button w3-hover-black w3-hover-text-white" style="text-align: left;"> http://m.cnnindonesia.com/gaya-hidup/20170309113747-255-198940/flu-burung-masih-hantui-dunia/</a> </li>
+  </div>
+</div>
+</div>
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
