--- a/perpem.html
+++ b/perpem.html
@@ -105,11 +105,11 @@ body, html {
 
       <p>Pemerintah menyusun strategi baru untuk menyetop penyebaran flu burung yang terus merenggut korban jiwa. Satu di antaranya dengan memusnahkan unggas di perkotaan yang berada dalam radius satu kilometer dari unggas yang dipastikan terjangkit virus avian influenza.</p>
 
-      <p>Pemerintah juga akan memvaksinasi setiap unggas di radius tiga kilometer dari unggas yang terjangkit flu burung. Hal ini terutama akan dilakukan di perkotaan di lima provinsi yakni Jawa Barat, DKI Jakarta, Lampung, Banten, dan Jawa Tengah. Persediaan obat antiflu burung atau Tamiflu pun akan ditambah. Saat ini pemerintah mempunyai persediaan 160.000 tablet Tamiflu dan rencananya ditambah lagi 200.000 tablet.</p>
+      <p>Pemerintah juga melakukan vaksinasi pada setiap unggas dalam radius tiga kilometer dari unggas yang terjangkit flu burung.</p>
     </div>
 <div class="w3-container w3-justify">
     <div>
-  <p>Pemerintah akan melibatkan semua masyarakat demi lancarnya program ini. Strategi lain adalah mengendalikan penyebaran wabah maupun infeksi baru pada unggas. Salah satu caranya dengan menjaga sanitasi kandang sehingga kelompok berisiko tinggi seperti peternak juga dapat terhindar dari virus avian influenza.</p>
+  <p>Pemerintah akan melibatkan semua masyarakat demi lancarnya program ini. Strategi lain yang dilakukan adalah mengendalikan penyebaran wabah maupun infeksi baru pada unggas. Salah satu caranya dengan menjaga sanitasi kandang sehingga kelompok berisiko tinggi seperti peternak juga dapat terhindar dari virus avian influenza.</p>
 
   <p>Presiden meminta masyarakat tak perlu resah namun tetap waspada terhadap penyakit yang bersumber pada unggas itu. Lebih lanjut, presiden juga meminta masyarakat agar tidak mudah terpengaruh isu-isu yang menyesatkan mengenai flu burung. Pemerintah berupaya melindungi warga serta sumberdaya hayati hewan, khususnya di wilayah NKRI, dari penyakit hewan menular utama flu burung (Avian influenza/AI) dengan melakukan berbagai langkah antisipasi melalui pengendalian terhadap lalu lintas ternak unggas dan produk unggas dari dan ke wilayah NKRI secara ketat. Sebagai contoh, pada 27 April 2005, Departemen Pertanian melalui Dirjen Peternakan mengeluarkan <b>Surat Edaran No. 1403/HK.340/F/04.2005</b> tentang pelarangan pemasukan komoditas unggas, bahan asal unggas dan asil bahan asal unggas dari Malaysia ke dalam wilayah negara Republik Indonesia. Seperti himbauan Pemerintah, warga tidak perlu takut mengkonsumsi telur dan daging ayam serta produk ternak unggas lainnya. Sebab, bila dimasak dengan benar penyakit flu burung tidak perlu dikhawatirkan.</p>
 
