--- a/pencegahan.html
+++ b/pencegahan.html
@@ -153,6 +153,12 @@ Flu burung menular melalui kontak langsung dengan unggas yang sakit atau lingkun
     <p class="w3-justify">Menyantap daging atau telurnya dengan tidak dimasak sampai benar-benar matang. Makan daging dan telur yang matang tidak akan membuat Anda tertular virus flu burung.</p>
 </div>
   </div>
+  <div> Source:
+  <ul>
+    <li>https://www.dettol.co.id/illness-prevention/illnesses/bird-flu/</li>
+    <li>https://www.alodokter.com/flu-burung</li>
+  </ul>
+</div>
   </div>
   
 <!-- Footer -->
