--- a/gejala.html
+++ b/gejala.html
@@ -175,3 +175,15 @@ function toggleFunction() {
 
 </body>
 </html>
+© 2020 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
