--- a/perpem.html
+++ b/perpem.html
@@ -128,7 +128,7 @@ body, html {
   <li>Stamping out di daerah tertular baru</li>
   <li>Peningkatan kesadaran masyarakat (public awareness)</li>
   <li>Monitoring dan evaluasi</li>
-</div>
+</div> <br><br>
   <p>Source : </p> 
   <a href="http://www.litbang.pertanian.go.id/info-aktual/221/" class="w3-bar-item w3-button w3-hover-black w3-hover-text-white" style="text-align: left;">http://www.litbang.pertanian.go.id/info-aktual/221/</a> </li>
   <a href="https://m.liputan6.com/news/read/117664/strategi-pemerintah-memberantas-flu-burung
