--- a/about us.html
+++ b/about us.html
@@ -152,7 +152,7 @@ body, html {
 
   <div class="w3-col l3 s6 w3-white">
     <div class="w3-card-4 w3-margin w3-round w3-hover-dark-gray w3-center">
-      <img src="foto imel.png" style="width:100%">
+      <img src="foto imel.jpeg" style="width:100%">
         <div class="w3-container">
           <h5>Maretia Imelda</h5>
           <p><b>Programmer</b></p>
